# unit_converter

./: .clang-tidy  .gitignore  CMakeLists.txt  CTestTestfile.cmake  README.md
.github/workflows/: ci.yml
src/: Units.cpp  Units.h  main.cpp
tests/: CMakeLists.txt  ErrorTests.cpp  LengthTests.cpp  MassTests.cpp  TemperatureTests.cpp  TestHelpers.cpp  UnitTests.cpp  UnitTests.h  test_main.cpp  tests[1]_include.cmake
tests/common/: TestHelpers.h
